cabal-version:      3.0
name:               reflex-dom-lazy
version:            0.1.0.0
synopsis:           Lazy loading widgets for reflex-dom
description:        Lazy and progressive loading widgets for reflex-dom
homepage:           https://github.com/reflex-frp/reflex-dom-lazy
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ali Abrar
maintainer:         maintainer@obsidian.systems
copyright:          Obsidian Systems LLC
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                    README.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Reflex.Dom.Dropdown
    build-depends:    base,
                      containers,
                      ghcjs-dom,
                      jsaddle,
                      jsaddle-dom,
                      reflex-dom,
                      reflex-dom-core,
                      reflex-dom-attrs,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable reflex-dom-lazy
    import:           warnings
    main-is:          Readme.lhs
    build-depends:
        base,
        containers,
        reflex-dom,
        reflex-dom-attrs,
        reflex-dom-tables,
        reflex-dom-lazy,
        text
    hs-source-dirs:   src-exe
    default-language: Haskell2010
